--- a/code/script_v7_stochastic_speed_up/Illustrating_results_zg.ipynb
+++ b/code/script_v7_stochastic_speed_up/Illustrating_results_zg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "3c1efdee",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "9e73a6e4",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "b45f6946",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "24356594",
    "metadata": {},
    "outputs": [],
@@ -89,17 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "299b3e71",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/sinabaghali/Git/2018_stochastic_fast_charging/code/script_v7_stochastic_speed_up/Results/Results_20211115_1628'"
+       "'/home/sinabaghali/Git/2018_stochastic_fast_charging/code/script_v7_stochastic_speed_up/Results/Results_20211117_1902'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "5a57c945",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "e28721b4",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "8c5af160",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "7f5ff6b4",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "1      2          1   308.0    WO anti"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "3ec6ab6d",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "d76b9de7",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "74a63791",
    "metadata": {},
    "outputs": [],
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "0f00c736",
    "metadata": {
     "scrolled": true
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "d031d825",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
     "        for s in Ntw.C.S:\n",
     "            for k in Ntw.C.K:\n",
     "                for u in Ntw.Scn.U:\n",
-    "                    A[r,s,k,u] = -lamda1[r,s,k,k,u] + lamda1[r,s,k,r,u] -lamda1[r,s,k,s,u] + lamda2[r,s,k,r,u] - lamda2[r,s,k,k,u] - lamda2[r,s,k,s,u]\n",
+    "                    A[r,s,k,u] = lamda1[r,s,k,r,u] - lamda1[r,s,k,k,u]  + lamda2[r,s,k,k,u] - lamda2[r,s,k,s,u]\n",
     "                    t[r,s,k,u] = A[r,s,k,u]\n",
     "#                     t[r,s,k,u] = (Ntw.C.b3/Ntw.Scn.pr[u]) * (A[r,s,k,u]- mu[r,s,u])\n",
     "#                     t[r,s,k,u] = sum(Ntw.C.tff[i,j] * (1+Ntw.C.b[i,j]*((x[i,j,r,s,k,u]/Ntw.C.cap[i,j])**Ntw.C.alpha[i,j])) for (i,j) in Ntw.C.A)\n",
@@ -622,16 +622,37 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "712befb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ntw.C.K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "f06c0da1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(1, 3, 2, 1): 31.158963999999997}"
+       "{(1, 3, 2, 1): 16.0}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "f2cf0d8e",
    "metadata": {},
    "outputs": [
@@ -652,7 +673,7 @@
        "{(1, 3, 2, 1): 20.0}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,17 +684,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "f334bd4b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{(1, 3, 1): -7.579482}"
+       "{(1, 3, 1): -7.78987}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "9840ef98",
    "metadata": {},
    "outputs": [],
@@ -696,31 +717,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "711663ab",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{(1, 3, 2, 1, 1): 7.789743,\n",
-       " (1, 3, 2, 2, 1): -0.210257,\n",
-       " (1, 3, 2, 3, 1): -7.579482}"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lamda1_stochastic"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
-   "id": "22eb5bc4",
+   "id": "711663ab",
    "metadata": {},
    "outputs": [
     {
@@ -737,12 +735,35 @@
     }
    ],
    "source": [
-    "lamda2_stochastic"
+    "lamda1_stochastic"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "22eb5bc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 3, 2, 1, 1): 7.579354,\n",
+       " (1, 3, 2, 2, 1): 0.21013,\n",
+       " (1, 3, 2, 3, 1): -7.78987}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lamda2_stochastic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "985d79bd",
    "metadata": {},
    "outputs": [
@@ -752,7 +773,7 @@
        "{(2, 1): 308.0}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "4e521d80",
    "metadata": {},
    "outputs": [
@@ -780,7 +801,7 @@
      "output_type": "stream",
      "text": [
       "Surpluss       With non-anti      WO non-anti\n",
-      "               -6703.1793       -623.1793\n"
+      "               -6400.0       -320.0\n"
      ]
     }
    ],
@@ -811,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "1f79c846",
    "metadata": {},
    "outputs": [
@@ -821,7 +842,7 @@
        "0.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "029ed24d",
    "metadata": {},
    "outputs": [],
@@ -865,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "b6e12190",
    "metadata": {},
    "outputs": [
@@ -875,7 +896,7 @@
        "0.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "ec1cc8a3",
    "metadata": {},
    "outputs": [],
@@ -919,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "771f86bf",
    "metadata": {},
    "outputs": [
